style. fix background-position on mobile layout

--- a/css/style.scss
+++ b/css/style.scss
@@ -91,8 +91,8 @@ html {
   margin: 0 auto;
   background-image: url("../assets/bg-main-mobile.png");
   background-repeat: no-repeat;
-  background-position: top right;
-  background-size: 100%;
+  background-position: 30px -250px;
+  background-size: 140%;
   background-color: $BgColor;
 }
 
